--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -3,3 +3,5 @@
 ^LICENSE\.md$
 ^CODE_OF_CONDUCT\.md$
 ^\.github/workflows/R-CMD-check\.yaml$
+^codecov\.yml$
+^\.github/workflows/pr-commands\.yaml$
