--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    covr
 RoxygenNote: 7.0.2
 URL: https://github.com/rcctodd/mysimplecompendiuml6
 BugReports: https://github.com/rcctodd/mysimplecompendiuml6/issues
